--- a/history.txt
+++ b/history.txt
@@ -19,3 +19,9 @@ Sprzedano "Pi³ka do koszykówki" w iloœæ sztuk: 1. Cena sprzeda¿y: 65.4 PLN.
 Do konta dodano: 200.0 PLN.
 Sprzedano "Pi³ka do koszykówki" w iloœæ sztuk: 1. Cena sprzeda¿y: 65.4 PLN.
 Zakupiono przedmiot: "Hulajnoga", w iloœci: 3. Cena za sztuke: 150.78 PLN. £¹czna cena za zamówienie: 452.34 PLN. Cene sprzeda¿y produktu ustalono na: 210.2 PLN.
+Do konta dodano: 2000.0 PLN.
+Sprzedano "Rower miejski" w iloœæ sztuk: 1. Cena sprzeda¿y: 1899.99 PLN.
+Zakupiono przedmiot: "Deskorolka", w iloœci: 10. Cena za sztuke: 60.33 PLN. £¹czna cena za zamówienie: 603.3 PLN. Cene sprzeda¿y produktu ustalono na: 105.99 PLN.
+Sprzedano "Deskorolka" w iloœæ sztuk: 1. Cena sprzeda¿y: 105.99 PLN.
+Sprzedano "Deskorolka" w iloœæ sztuk: 1. Cena sprzeda¿y: 105.99 PLN.
+Sprzedano "Hulajnoga" w iloœæ sztuk: 1. Cena sprzeda¿y: 210.2 PLN.
